--- a/templates/single-property.twig
+++ b/templates/single-property.twig
@@ -46,6 +46,7 @@
                                         <li><i class="fa-light fa-desktop"></i> {{ post.availability_size_desks_from ~ ' - ' ~ post.availability_size_desks_to }} desks</li>
                                     </ul>
 
+                                    <div><strong>To rent: Please contact us for price</strong></div>
                                 </div><!-- .summary -->
                             </div>
                             <div class="col-lg-4 col-md-5">
