property detail price - font size larger

--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -164,6 +164,10 @@
                 }
             }
 
+            .property-detail-price-hint{
+                font-size: 20px;
+            }
+
             .property-let-additional-links{
                 margin-bottom: 20px;
 
